# prefire

./: .gitignore  Cargo.toml  Rocket.toml  fix_database.py
migrations/: 20250322184938_init.sql  20250616061604_blake3.sql
src/: main.rs
src/www/: index.html  index.js  privacy.html  style.css  terms.html  upload.js
templates/: admin.html.hbs  file.html.hbs  login.html.hbs  missing.html.hbs
