[package]
name = "prefire"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = "0.5.1"
ws = { package = "rocket_ws", version = "0.1.1" }
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars"] }
uuid = { version = "1.16.0", features = ["v4"] }
crc32fast = "1.4.2"
sha2 = "0.10.8"
chrono = "0.4.40"
mime_guess = "2.0.5"
serde = "1.0.219"
base64 = "0.22.1"
blake3 = "1.8.2"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_sqlite"]